# discord-ext-help

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
discord_ext_help/: __init__,py  help.py
discord_ext_help/legacy/: __init__.py  config.py  extension.py
docs/: generate-help.md  index.md  migrate-from-legacy.md
generate-help/: index.html
migrate-from-legacy/: index.html
search/: search_index.json
